fix footer overlap

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -17,6 +17,8 @@ html {
   /* Set the fixed height of the footer here */
   height: @footer_height;
   background-color: #f5f5f5;
+
+  border-top: 1px solid #000;
 }
 
 
@@ -42,6 +44,10 @@ html {
   margin:0;
 }
 
+.maincontent {
+  padding-bottom: @footer_height;  // Clear the footer so content not lost under it
+
+}
 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
@@ -56,6 +62,7 @@ body > .container {
 .footer > .container {
   padding-right: 15px;
   padding-left: 15px;
+
 }
 
 code {
